k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-admission-mutation
  labels:
    app: webhook-admission-mutation
    component: mutating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-admission-mutation
  template:
    metadata:
      labels:
        app: webhook-admission-mutation
    spec:
      serviceAccountName: webhook-admission-mutation
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: webhook-admission-mutation
      containers:
      - name: webhook-admission-mutation
        image: nas1k/webhook-admission-mutation:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 128M
            cpu: 300
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
