k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-admission-mutation
  labels:
    app: webhook-admission-mutation
    component: mutating-webhook
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: webhook-admission-mutation
  selector:
    app: webhook-admission-mutation
