k8s/admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-admission-mutation
webhooks:
- name: pods.webhook-admission-mutation
  clientConfig:
    service:
      namespace: webhook-admission-mutation
      name: webhook-admission-mutation
      path: /pods
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM5akNDQWQ2Z0F3SUJBZ0lRTkxVc1ljYy9iRmdYQjlyNkNyWEM1ekFOQmdrcWhraUc5dzBCQVFzRkFEQVYKTVJNd0VRWURWUVFERXdwemRtTXRZMkYwTFdOaE1CNFhEVEU1TURVd05ERTVORE14TlZvWERUSTVNRFV3TVRFNQpORE14TlZvd0ZURVRNQkVHQTFVRUF4TUtjM1pqTFdOaGRDMWpZVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBTHFNaGE5V1J3bjZ1V2JWQ2JxZkJ1bEhoZHRPOCs0Mjk5ZnJQQ1lCbFF5VzZEaFYKakdOeU5vMCt2WU1aVW9pSDFudTlaRUtUM0Uwdmx1amhLRG5PcVBTOUFPR053RzZJUkJPY1BwQlZwQnlhcDJjUAp3TTk2TWh5QnVMcW [...]
  rules:
  - operations:
    - CREATE
    apiGroups:
    - "*"
    apiVersions:
    - "*"
    resources:
    - pods
  failurePolicy: Fail
  namespaceSelector:
    matchExpressions:
    - key: name
      operator: NotIn
      values:
      - webhook-admission-mutation
